--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dej
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=${POSTGRESQL_DB_PASSWORD}
+spring.datasource.password=none
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
